--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.54",
         "laravel/passport": "^10.2",
         "laravel/tinker": "^2.5",
+        "overtrue/laravel-lang": "~4.0",
         "propaganistas/laravel-phone": "^4.3"
     },
     "require-dev": {
