--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/passport": "^10.2",
         "laravel/tinker": "^2.5",
         "overtrue/laravel-lang": "~4.0",
+        "overtrue/laravel-socialite": "~3.0",
         "propaganistas/laravel-phone": "^4.3"
     },
     "require-dev": {
