--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "gregwar/captcha": "^1.1",
         "guzzlehttp/guzzle": "^7.0.1",
+        "kslimani/laravel-passport-grant": "^1.1",
         "laravel/framework": "^8.54",
         "laravel/passport": "^10.2",
         "laravel/tinker": "^2.5",
