--- a/.env.example
+++ b/.env.example
@@ -50,5 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+# 微信配置
 WEIXIN_KEY=
 WEIXIN_SECRET=
+
+# 打印日志开关
+LOG_QUERY=
