--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "propaganistas/laravel-phone": "^4.3"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
