--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.5",
         "overtrue/laravel-lang": "~4.0",
         "overtrue/laravel-socialite": "~3.0",
+        "predis/predis": "^2.1",
         "propaganistas/laravel-phone": "^4.3"
     },
     "require-dev": {
