--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-xlswriter": "*",
         "doctrine/dbal": "^3.1",
         "friendsofphp/php-cs-fixer": "^3.3",
         "fruitcake/laravel-cors": "^2.0",
@@ -14,13 +15,13 @@
         "intervention/image": "^2.7",
         "kslimani/laravel-passport-grant": "^1.1",
         "laravel/framework": "^8.54",
+        "laravel/horizon": "^5.17",
         "laravel/passport": "^10.2",
         "laravel/tinker": "^2.5",
         "overtrue/laravel-lang": "~4.0",
         "overtrue/laravel-socialite": "~3.0",
         "predis/predis": "^2.1",
-        "propaganistas/laravel-phone": "^4.3",
-        "ext-xlswriter": "*"
+        "propaganistas/laravel-phone": "^4.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
