--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/horizon": "^5.17",
         "laravel/passport": "^10.2",
         "laravel/tinker": "^2.5",
+        "medz/cors": "^1.5",
         "overtrue/laravel-lang": "~4.0",
         "overtrue/laravel-socialite": "~3.0",
         "predis/predis": "^2.1",
