--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "overtrue/laravel-lang": "~4.0",
         "overtrue/laravel-socialite": "~3.0",
         "predis/predis": "^2.1",
-        "propaganistas/laravel-phone": "^4.3"
+        "propaganistas/laravel-phone": "^4.3",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
