feature:控制器追加权限检验

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "overtrue/laravel-socialite": "~3.0",
         "predis/predis": "^2.1",
         "propaganistas/laravel-phone": "^4.3",
+        "spatie/laravel-enum": "^3.0",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
